--- a/relinksys/web/src/app/company-payment/payment/payment.component.html
+++ b/relinksys/web/src/app/company-payment/payment/payment.component.html
@@ -215,9 +215,11 @@
                                                 <td>{{invoiceList.length - i}}</td>
                                                 <td>{{data.PayeeName}}</td>
                                                 <td>{{data.InvoiceNo}}</td>
-                                                <td>{{data.ShopName}} <span [style.color]="'blue'"
-                                                        *ngIf="data.AreaName !== 'null'">({{data.
-                                                        AreaName}})</span></td>
+                                                <td>{{data.ShopName}} 
+                                                    <ng-container *ngIf="data.AreaName && data.AreaName !== 'null' && data.AreaName !== ''">
+                                                        (<span style="color: blue;">{{ data.AreaName }}</span>)
+                                                    </ng-container>
+                                                </td>
                                                 <td>{{dateFormat(data.PurchaseDate)}}</td>
                                                 <td>{{data.GSTNo}}</td>
                                                 <td>{{data.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
