--- a/relinksys/web/src/app/inventory/location-tracker/location-tracker.component.html
+++ b/relinksys/web/src/app/inventory/location-tracker/location-tracker.component.html
@@ -18,7 +18,9 @@
                                       <mat-select name="shopID" [(ngModel)]="data1.ShopID" >
                                         <!-- <mat-option [value]=0>All</mat-option> -->
                                         <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
-                                          <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                       <ng-container *ngIf="s.AreaName && s.AreaName !== 'null' && s.AreaName !== ''">
+                                                     (<span style="color: blue;">{{ s.AreaName }}</span>)
+                                                 </ng-container>
                                         </mat-option>
                                       </mat-select>
                                     </mat-form-field>
@@ -26,7 +28,9 @@
                                       <mat-label>Shop Name</mat-label>
                                       <mat-select name="shopID" [(ngModel)]="data1.ShopID">
                                         <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
-                                          <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                          <ng-container *ngIf="s.AreaName && s.AreaName !== 'null' && s.AreaName !== ''">
+                                                     (<span style="color: blue;">{{ s.AreaName }}</span>)
+                                                 </ng-container>
                                         </mat-option>
                                       </mat-select>
                                     </mat-form-field>
@@ -175,7 +179,9 @@
                                                     <td>{{data.Barcode}}</td>
                                                     <td>{{data.RetailPrice}}</td>
                                                     <td>{{data.WholeSalePrice}}</td>
-                                                    <td>{{data.ShopName}}</td>
+                                                    <td>{{data.ShopName}} <ng-container *ngIf="data.AreaName && data.AreaName !== 'null' && data.AreaName !== ''">
+                                                        (<span style="color: blue;">{{ data.AreaName }}</span>)
+                                                    </ng-container></td>
                                                </tr>
                                             </tbody>
                                         </table>
