--- a/relinksys/web/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/relinksys/web/src/app/inventory/preorder-list/preorder-list.component.html
@@ -94,8 +94,10 @@
                                                     <td>{{dataList.length - i }}</td>
                                                     <td>{{data.SupplierName}}</td>
                                                     <td>{{data.InvoiceNo}}</td>
-                                                    <td>{{data.ShopName}}<span [style.color]="'blue'"
-                                                            *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span>
+                                                    <td>{{data.ShopName}}
+                                                        <ng-container *ngIf="data.AreaName && data.AreaName !== 'null' && data.AreaName !== ''">
+                                                        (<span style="color: blue;">{{ data.AreaName }}</span>)
+                                                    </ng-container>
                                                     </td>
                                                     <td>{{data.PurchaseDate}}</td>
                                                     <!-- <td>{{data.PaymentStatus}}</td> -->
