--- a/relinksys/web/src/app/inventory/transfer-list/transfer-list.component.html
+++ b/relinksys/web/src/app/inventory/transfer-list/transfer-list.component.html
@@ -100,10 +100,16 @@
                           <td>{{dataList.length - i }} </td>
                           <td>{{dateFormat(data.CreatedOn)}}</td>
                           <td>{{data.InvoiceNo}}</td>
-                          <td>{{data.FromShop}}<span [style.color]="'blue'"
-                              *ngIf="data.FromAreaName !== 'null'">({{data.FromAreaName}})</span></td>
-                          <td>{{data.ToShop}}<span [style.color]="'blue'"
-                              *ngIf="data.ToAreaName !== 'null'">({{data.ToAreaName}})</span></td>
+                          <td>{{data.FromShop}}
+                            <ng-container *ngIf="data.FromAreaName && data.FromAreaName !== 'null' && data.FromAreaName !== ''">
+                                (<span style="color: blue;">{{ data.FromAreaName }}</span>)
+                            </ng-container>
+                          </td>
+                          <td>{{data.ToShop}}
+                             <ng-container *ngIf="data.ToAreaName && data.ToAreaName !== 'null' && data.ToAreaName !== ''">
+                                (<span style="color: blue;">{{ data.ToAreaName }}</span>)
+                            </ng-container>
+                            </td>
                           <td>{{data.Quantity}}</td>
                           <td>{{data.TransferStatus}}</td>
                           <td>{{data.Remark}}</td>
