--- a/relinksys/web/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/relinksys/web/src/app/report/eyetest-report/eyetest-report.component.html
@@ -233,8 +233,11 @@
                                                 <td> {{ d.CustomerMobileNo1 }} </td>
                                                 <td> {{ d.Family }} </td>
                                                 <td> {{ d.RefferedByDoc }} </td>
-                                                <td> {{ d.ShopName }} <span [style.color]="'blue'"
-                                                        *ngIf="d.AreaName !== 'null'">({{d.AreaName}})</span></td>
+                                                <td> {{ d.ShopName }} 
+                                                    <ng-container *ngIf="d.AreaName && d.AreaName !== 'null' && d.AreaName !== ''">
+                                                        (<span style="color: blue;">{{ d.AreaName }}</span>)
+                                                    </ng-container>
+                                                </td>
                                                 <td> {{ d.CreatedPerson}}
                                                 <td> {{ dateFormat(d.VisitDate)}}
                                                 <td> {{ dateFormat(d.ExpiryDate)}}</td>
