--- a/relinksys/web/src/app/report/old-sale/old-sale.component.html
+++ b/relinksys/web/src/app/report/old-sale/old-sale.component.html
@@ -496,8 +496,10 @@
                                                         <td> {{t.Amount}}</td>
                                                         <td> {{t.Paid}}</td>
                                                         <td> {{t.Balance}}</td>
-                                                        <td> {{ t.ShopName }} <span [style.color]="'blue'"
-                                                                *ngIf="t.AreaName !== 'null'">({{t.AreaName}})</span>
+                                                        <td> {{ t.ShopName }}  
+                                                            <ng-container *ngIf="t.AreaName && t.AreaName !== 'null' && t.AreaName !== ''">
+                                                        (<span style="color: blue;">{{ t.AreaName }}</span>)
+                                                    </ng-container>
                                                         </td>
                                                     </tr>
                                                 </tbody>
