--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -1927,8 +1927,10 @@
                                     <input class="inputWidth" name="Remark{{v.ID}}" [(ngModel)]="v.Remark"
                                         #Remarkcontrol [autocomplete]="false" [disabled]="v.Sel !== 1">
                                 </td>
-                                <td>{{v.ShopName}}<span [style.color]="'blue'"
-                                        *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span>
+                                <td>{{v.ShopName}}
+                                    <ng-container *ngIf="v.AreaName && v.AreaName !== 'null' && v.AreaName !== ''">
+                                              (<span style="color: blue;">{{ v.AreaName }}</span>)
+                                    </ng-container>
                                 </td>
                             </tr>
                         </tbody>
