--- a/relinksys/web/src/app/sale/commission/commission.component.html
+++ b/relinksys/web/src/app/sale/commission/commission.component.html
@@ -44,8 +44,10 @@
                                             [ngModelOptions]="{standalone: true}" #singleSelect   required>
                                             <mat-option [value]=0>All</mat-option>
                                             <mat-option *ngFor="let sup of shopList  let i = index;" [value]="sup.ID">
-                                                {{sup.Name}} <span [style.color]="'blue'"
-                                                    *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
+                                                {{sup.Name}}   
+                                                 <ng-container *ngIf="sup.AreaName && sup.AreaName !== 'null' && sup.AreaName !== ''">
+                                                     (<span style="color: blue;">{{ sup.AreaName }}</span>)
+                                                 </ng-container>
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
@@ -121,8 +123,10 @@
                                             <td>{{item.NonBrandedCommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.CommissionAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>{{item.PayeeName}}</td>
-                                            <td>{{item.ShopName}}<span [style.color]="'blue'"
-                                                *ngIf="item.AreaName != 'null'">({{item.AreaName}})</span>
+                                            <td>{{item.ShopName}}
+                                            <ng-container *ngIf="item.AreaName && item.AreaName !== 'null' && item.AreaName !== ''">
+                                                (<span style="color: blue;">{{ item.AreaName }}</span>)
+                                             </ng-container>
                                             </td>
                                         </tr>
                                     </tbody>
